# orderbook-tft

./: .env  .env.example  .gitignore  integration.py  presets.json  requirements.txt  setup.cfg  tft_trainer.py  train.py
orderbook_tft/: data_processor.py  integration.py  presets.json  tft_trainer.py  train.py  utils.py
src/: data_processor.py  trainer.py
src/models/: tft-epoch=11-val_loss=1.7316.ckpt
