[metadata]
name = orderbook-tft
version = 0.1.0
author = Yuto Hayashi
url = https://github.com/YutoHayashi/orderbook-tft
licence = MIT

[options]
packages = 
    orderbook_tft
python_requires = ==3.11.*
include_package_data = True
install_requires =
    lightning
    numpy<2
    pandas
    python-dotenv
    pytorch-forecasting
    scikit-learn
    torch

[options.package_data]
orderbook_tft = presets.json

[options.entry_points]
console_scripts =
    train-tft = orderbook_tft.train:main